--- a/manifest.json
+++ b/manifest.json
@@ -22,6 +22,7 @@
     },
     "default_popup": "popup/popup.html"
   },
+  "options_page": "options/options.html",
   "content_scripts": [
     {
       "matches": [
